# sulfur

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/libsulfur/: error.hpp  libsulfur.hpp  pipe.h  process.hpp
src/: CMakeLists.txt  libsulfur.cpp  pipe.cpp  process.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  looper.cpp
tools/: CMakeLists.txt  sulfur.cpp
